--- a/EventBooking/Views/Shared/_Layout.cshtml
+++ b/EventBooking/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - EventLink Metropolitan</title>
+    <title>@ViewData["Title"] - EventBooking Metropolitan</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
                     <div class="bg-primary p-2 rounded-3 me-2 d-flex align-items-center justify-content-center" style="width: 32px; height: 32px;">
                         <i class="fas fa-link text-white small"></i>
                     </div>
-                    <span>eventlink</span>
+                    <span>eventbooking</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -65,7 +65,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h5 class="text-white">EventLink</h5>
+                    <h5 class="text-white">EventBooking</h5>
                     <p>The smartest way to manage and discover cultural events in your city.</p>
                 </div>
                 <div class="col-md-4 text-center">
@@ -86,7 +86,7 @@
             </div>
             <hr class="mt-4 border-secondary opacity-25" />
             <div class="text-center pb-4">
-                &copy; 2026 - EventLink - <a asp-area="" asp-controller="Home" asp-action="Privacy" class="text-secondary">Privacy</a>
+                &copy; 2026 - EventBooking - <a asp-area="" asp-controller="Home" asp-action="Privacy" class="text-secondary">Privacy</a>
             </div>
         </div>
     </footer>
