--- a/EventBooking/Views/Shared/_Layout.cshtml
+++ b/EventBooking/Views/Shared/_Layout.cshtml
@@ -16,11 +16,8 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3 sticky-top">
             <div class="container-fluid">
-                <a class="navbar-brand d-flex align-items-center" asp-area="" asp-controller="Home" asp-action="Index">
-                    <div class="bg-primary p-2 rounded-3 me-2 d-flex align-items-center justify-content-center" style="width: 32px; height: 32px;">
-                        <i class="fas fa-link text-white small"></i>
-                    </div>
-                    <span>eventbooking</span>
+                <a class="navbar-brand animate-fade-in" asp-area="" asp-controller="Home" asp-action="Index">
+                    <span class="fw-bold tracking-tight">EVENTBOOKING</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
